dev/client.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: doom-client
spec:
    replicas: 1
    selector:
      matchLabels:
        name: doom-client
    template:
      metadata:
        labels:
          name: doom-client
      spec:
        containers:
        - name: doom-client
          image: gcr.io/adam-akka/github-microservice-doom-doom-client:076cc25b9637bcd3ed777eff1bbf9914789a42aa
          ports:
          - containerPort: 8080
            name: web
---
kind: Service
apiVersion: v1
metadata:
    name: doom-client
spec:
    ports:
    - name: web
      port: 80
      targetPort: 8080
    selector:
      name: doom-client
    type: LoadBalancer
