dev/engine.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: doom-engine
spec:
    replicas: 1
    selector:
      matchLabels:
        name: doom-engine
    template:
      metadata:
        labels:
          name: doom-engine
      spec:
        containers:
        - name: doom-engine
          image: gcr.io/adam-akka/github-microservice-doom-doom-engine:34e5d2612cd656b8325e9f6779b6eb90c9b49413
          ports:
          - containerPort: 8080
            name: web
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
---
kind: Service
apiVersion: v1
metadata:
    name: doom-engine
spec:
    ports:
    - name: web
      port: 80
      targetPort: 8080
    selector:
      name: doom-engine
    type: ClusterIP
