dev/state.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: doom-state
spec:
    replicas: 1
    selector:
      matchLabels:
        name: doom-state
    template:
      metadata:
        labels:
          name: doom-state
      spec:
        containers:
        - name: doom-state
          image: gcr.io/adam-akka/github-microservice-doom-doom-state:787f14bddce78fd8dc55c7928980bc67e377af17
          ports:
          - containerPort: 8080
            name: web
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
---
kind: Service
apiVersion: v1
metadata:
    name: doom-state
spec:
    ports:
    - name: web
      port: 80
      targetPort: 8080
    selector:
      name: doom-state
    type: ClusterIP
