dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: doom-client
spec:
    backend:
        serviceName: doom-client
        servicePort: web
